Resolves: tdf#79442 in OOXML import add external files to LinkManager

Now that we store formula results without recalculating, the implicit
logic that adds files of external references to the LinkManager is not
triggered, explicitly force it during import.

Change-Id: Id867d2fa2b39841fb4c8e90941814457c8db431d
(cherry picked from commit 8464ea6961b9cc54af9c11cce1b80ed7e0cc77e2)
Reviewed-on: https://gerrit.libreoffice.org/30277
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit ef4051a295b76a5398e6c4a64bc0f8e1322291c7)